# like

./: .flake8  .gitignore  pyproject.toml  schema.sql  serve.sh
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
like/: __init__.py  config.py  db.py
like/views/: api.py  app.py  utils.py
tests/: test_like.py
